User johns
Date:

    Pre Release Version 0.5.2
    Add Feature #1103: change audio devices without vdr restart.
    Fix bug #1089: Vdpau decoder used wrong number of mpeg reference frames.
    Fix bug: with some streams endless loop in pes audio parser.
    Report correct video size in cSoftHdDevice::GetVideoSize.
    Add picture adjustment support for vdpau.
    Revert "mpeg_vdpau" back to "mpegvideo_vdpau".
    Fix bug: Can't use software decoder with VDPAU.
    Resume plugin, if suspend control stops.
    Removes old audio code (!USE_AUDIORING).
    Use -DOSD_DEBUG to debug OSD.

User arttupii
Date: Tue Aug 7 16:46:23 2012 +0200

    Fix bug #909: Subtitles destroy menu.
    Fix bug #1003: Subtitles overlapping.

User johns
Date: Fri Jul 27 19:15:48 CEST 2012

    Free used X11 resources colormap, pixmap, cursor.
    Fix bug: spelling USE_VAPI wrong, missing functions.

User johns
Date: Tue Jul  3 16:35:46 CEST 2012

    Release Version 0.5.1
    Add commandline support to disable hardware decoder.
    Display frame statistics in plugin menu.
    Fix bug: 100% CPU use during playback.
    Fix bug: audio use 100% CPU during pause.
    Guard audio skip against old PTS values.
    Improved audio skip, after channel switch.
    Setup add preview of collapsed tree.
    Fix bug: dvd plugin times out.
    Makes OSD size configurable.
    Support display with non-square pixels.
    Initial ADTS (AAC+) support.
    Fix bug #959: log flooded with service messages.

User durchflieger
Date: Mon Apr 30 14:46:51 CEST 2012

    Adds VDR DFAtmo Plugin support.

User johns
Date: Mon Apr 30 13:56:26 CEST 2012

    Fix bug: don't normalize or compress pass-through samples.
    Make audio ring buffer size a multiple of 3,5,7,8.
    Add reset ring buffer support.
    Fix bug: alloca wrong size for audio buffer.
    Handle jump in stream like stream start.
    Always compile audio drift correction.
    Add audio drift correction configuration to the setup.

User mini73