@@ -2,6 +2,7 @@ User johns
 Date:
 
     Pre Release Version 0.5.2
+    Use software decoder for still-pictures.
     Add Feature #1103: change audio devices without vdr restart.
     Fix bug #1089: Vdpau decoder used wrong number of mpeg reference frames.
     Fix bug: with some streams endless loop in pes audio parser.
